force-app/main/default/objects/ASF_Bulk_Case_Processor_Trigger_Config__mdt/ASF_Bulk_Case_Processor_Trigger_Config__mdt.object-meta.xml
<CustomObject>
    <label>Bulk Case Processor Trigger Config</label>
    <pluralLabel>Bulk Case Processor Trigger Configs</pluralLabel>
</CustomObject>