force-app/main/default/objects/ASF_Bulk_Case_Processor_Trigger_Config__mdt/fields/Config_Active__c.field-meta.xml
<CustomField>
    <fullName>Config_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Config Active?</label>
    <type>Checkbox</type>
</CustomField>