force-app/main/default/objects/ASF_Bulk_Case_Processor_Trigger_Config__mdt/fields/Index_Values__c.field-meta.xml
<CustomField>
    <fullName>Index_Values__c</fullName>
    <description>0-9 digit, separated by ; (semicolon) - Example 0;1;2</description>
    <label>Index Values</label>
    <length>40</length>
    <type>Text</type>
</CustomField>