force-app/main/default/objects/ASF_Bulk_Case_Processor_Trigger_Config__mdt/fields/Trigger_Alias__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Alias__c</fullName>
    <label>Trigger Alias</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>