force-app/main/default/objects/ASF_Bulk_Case_Processor_Trigger_Config__mdt/listViews/All_Metadata.listView-meta.xml
<ListView>
    <fullName>All_Metadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Config_Active__c</columns>
    <columns>Index_Values__c</columns>
    <columns>Trigger_Alias__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Metadata</label>
</ListView>